# Agent-Harness

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  改进.txt
.codegraph/: daemon.pid
docs/: INTRO.md  architecture-2026-05-29.md  code-review-2026-05-28.md  code-review-fix-2026-05-28.md  index.md  改进.txt
docs/explanation/: architecture.md  async-model.md  dependency-injection.md  protocol-design.md
docs/how-to/: channels.md  custom-memory.md  custom-provider.md  custom-sandbox.md  custom-tool.md  hooks.md  mcp-integration.md  permissions.md  skills.md
docs/mkdocs/: architecture.md  deployment.md  getting-started.md  index.md
docs/reference/: agent.md  config.md  events.md  harness.md  loop.md  providers.md  session.md  tools.md
docs/superpowers/: 2026-05-28-bug-fix-report.md
docs/tutorials/: 7-day-mastery.md  first-agent.md  quickstart.md
examples/: simple_agent.py
explanation/architecture/: index.html
explanation/async-model/: index.html
explanation/dependency-injection/: index.html
explanation/protocol-design/: index.html
how-to/channels/: index.html
how-to/custom-memory/: index.html
how-to/custom-provider/: index.html
how-to/custom-sandbox/: index.html
how-to/custom-tool/: index.html
how-to/hooks/: index.html
how-to/mcp-integration/: index.html
how-to/permissions/: index.html
how-to/skills/: index.html
reference/agent/: index.html
reference/config/: index.html
reference/events/: index.html
reference/harness/: index.html
reference/loop/: index.html
reference/providers/: index.html
reference/session/: index.html
reference/tools/: index.html
search/: search_index.json
src/agent_harness/: __init__.py  agent.py  harness.py
src/llm_harness/: __init__.py  __main__.py
tests/: conftest.py  test_agent.py  test_channels.py  test_config.py  test_config_standalone.py  test_context.py  test_e2e.py  test_harness_agent.py  test_hooks.py  test_integration.py  test_integration_full_pipeline.py  test_integration_memory_consolidation.py  test_loop_standalone.py  test_mailbox.py  test_mcp.py  test_memory.py  test_observability.py  test_permissions.py  test_sandbox.py  test_session.py
tests/adapters/: __init__.py  test_memory_backend.py  test_memory_consolidator.py  test_memory_policy.py  test_observability.py  test_session_backend.py
tests/core/: test_bus.py  test_harness.py  test_loop.py  test_session_manager.py  test_swarm.py
tests/extensions/: __init__.py  test_channels_extra.py  test_cron.py  test_hooks_extra.py  test_skills.py
tests/test_channels/: test_base_channel_nb.py
tests/test_config/: test_config_migration_nb.py  test_config_paths_nb.py
tests/test_cron/: test_cron_service_nb.py  test_cron_tool_list_nb.py
tests/test_hooks/: test_executor.py
tests/test_loop/: test_loop_consolidation_tokens.py  test_loop_save_turn.py
tests/test_memory/: test_consolidator_dispatch.py  test_memory_consolidation_types.py  test_policy.py  test_store_multi.py
tests/test_permissions/: test_checker.py
tests/test_plugins/: test_loader.py
tests/test_prompts/: test_environment.py
tests/test_providers/: test_provider_retry.py  (+1 more)
(+250 files in other folders)
