[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harness"
version = "0.1.0"
description = "Reusable agent harness base — ReAct loop + tool registry + provider abstraction + memory + skills"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "croniter>=2.0.0",
    "pyyaml>=6.0",
    "json-repair>=0.57.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.45.0",
]
openai = [
    "openai>=2.8.0",
]
tools = [
    "ddgs>=9.5.5",
    "readability-lxml>=0.8.4",
    "chardet>=3.0.2",
]
all = [
    "anthropic>=0.45.0",
    "openai>=2.8.0",
    "ddgs>=9.5.5",
    "readability-lxml>=0.8.4",
    "chardet>=3.0.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
